# pc-computer-doctor

./: Cargo.toml
assets/: amen48mono.rd  time drizzled on.rd
onsets/: cold sweat.rd  hahahaha.rd  lc1 bark.rd  lc1 bell.rd  tighten up.rd  time drizzled on.rd
scenes/: sweat.sd
src/: input.rs  main.rs  tui.rs
src/audio/: active.rs  mod.rs  pads.rs
